syntax = "proto3";

option java_package = "grabl.tracing.protocol";
option java_outer_classname = "TracingProto";

package protocol;

service TracingService {
    rpc create (Analysis.Req) returns (Analysis.Res);
    rpc stream (stream Trace.Req) returns (Trace.Res);
}

message Analysis {
    message Req {
        string owner = 1;
        string repo = 2;
        string commit = 3;
        string name = 4;
    }
    message Res {
        int64 analysisId = 1;
    }
}

// Using big endian 128-bit UUIDs
message Trace {
    message Req {
        bytes id = 1;
        bytes rootId = 2;

        oneof start {
            StartRoot rootStart = 3;
            bytes parentId = 4;
        }

        string name = 6;

        uint64 started = 7;
        uint64 ended = 8;

        string data = 9;
        repeated string labels = 10;

        message StartRoot {
            int64 analysisId = 1;

            string tracker = 2;
            uint32 iteration = 3;
        }
    }
    message Res {
    }
}